data/all_generated_tests/raw_wast_tests/br_IncorrectBranchTargetResolution_91.wast
;; 2. **Block and Loop Mix-Up Test**: Design a scenario where a `br` instruction within a block mistakenly references a loop label and verify that the implementation correctly identifies and prevents this invalid reference, respecting structured control constraints.

(assert_invalid
  (module (func $block-loop-mixup
    (block (loop (br 1)))
  ))
  "type mismatch"
)